--- a/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
@@ -33,7 +33,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Euro per inhabitant
     L0_BES_MIO_EUR:
       dimensions:
@@ -41,7 +42,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Million euro
     L0_BES_MIO_NAC:
       dimensions:
@@ -49,7 +51,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Million units of national currency
     L0_BES_MIO_PPS:
       dimensions:
@@ -57,7 +60,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Million purchasing power standards (PPS)
     L0_BES_MIO_PPS_KP05:
       dimensions:
@@ -65,7 +69,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Million purchasing power standards (PPS) at 2005 prices
     L0_BES_PC_GDP:
       dimensions:
@@ -73,7 +78,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Percentage of gross domestic product (GDP)
     L0_BES_PPS_HAB_KP05:
       dimensions:
@@ -81,7 +87,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L0'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L0'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
     L0_GOV_EUR_HAB:
       dimensions:
@@ -201,7 +208,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Euro per inhabitant
     L0_PNP_MIO_EUR:
       dimensions:
@@ -209,7 +217,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Million euro
     L0_PNP_MIO_NAC:
       dimensions:
@@ -217,7 +226,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Million units of national currency
     L0_PNP_MIO_PPS:
       dimensions:
@@ -225,7 +235,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Million purchasing power standards (PPS)
     L0_PNP_MIO_PPS_KP05:
       dimensions:
@@ -233,7 +244,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Million purchasing power standards (PPS) at 2005 prices
     L0_PNP_PC_GDP:
       dimensions:
@@ -241,7 +253,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Percentage of gross domestic product (GDP)
     L0_PNP_PPS_HAB_KP05:
       dimensions:
@@ -249,7 +262,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L0'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L0'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
     L0_TOTAL_EUR_HAB:
       dimensions:
@@ -313,7 +327,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Euro per inhabitant
     L1_BES_MIO_EUR:
       dimensions:
@@ -321,7 +336,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Million euro
     L1_BES_MIO_NAC:
       dimensions:
@@ -329,7 +345,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Million units of national currency
     L1_BES_MIO_PPS:
       dimensions:
@@ -337,7 +354,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Million purchasing power standards (PPS)
     L1_BES_MIO_PPS_KP05:
       dimensions:
@@ -345,7 +363,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Million purchasing power standards (PPS) at 2005 prices
     L1_BES_PC_GDP:
       dimensions:
@@ -353,7 +372,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Percentage of gross domestic product (GDP)
     L1_BES_PPS_HAB_KP05:
       dimensions:
@@ -361,7 +381,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L1'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L1'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
     L1_GOV_EUR_HAB:
       dimensions:
@@ -481,7 +502,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Euro per inhabitant
     L1_PNP_MIO_EUR:
       dimensions:
@@ -489,7 +511,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Million euro
     L1_PNP_MIO_NAC:
       dimensions:
@@ -497,7 +520,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Million units of national currency
     L1_PNP_MIO_PPS:
       dimensions:
@@ -505,7 +529,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Million purchasing power standards (PPS)
     L1_PNP_MIO_PPS_KP05:
       dimensions:
@@ -513,7 +538,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Million purchasing power standards (PPS) at 2005 prices
     L1_PNP_PC_GDP:
       dimensions:
@@ -521,7 +547,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Percentage of gross domestic product (GDP)
     L1_PNP_PPS_HAB_KP05:
       dimensions:
@@ -529,7 +556,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L1'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L1'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
     L1_TOTAL_EUR_HAB:
       dimensions:
@@ -593,7 +621,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Euro per inhabitant
     L2_BES_MIO_EUR:
       dimensions:
@@ -601,7 +630,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Million euro
     L2_BES_MIO_NAC:
       dimensions:
@@ -609,7 +639,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Million units of national currency
     L2_BES_MIO_PPS:
       dimensions:
@@ -617,7 +648,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Million purchasing power standards (PPS)
     L2_BES_MIO_PPS_KP05:
       dimensions:
@@ -625,7 +657,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Million purchasing power standards (PPS) at 2005 prices
     L2_BES_PC_GDP:
       dimensions:
@@ -633,7 +666,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Percentage of gross domestic product (GDP)
     L2_BES_PPS_HAB_KP05:
       dimensions:
@@ -641,7 +675,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Business enterprise sector; NUTS_Level: L2'
+      description: 'Sector of performance: Business enterprise sector; NUTS_Level:
+        L2'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
     L2_GOV_EUR_HAB:
       dimensions:
@@ -761,7 +796,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Euro per inhabitant
     L2_PNP_MIO_EUR:
       dimensions:
@@ -769,7 +805,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Million euro
     L2_PNP_MIO_NAC:
       dimensions:
@@ -777,7 +814,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Million units of national currency
     L2_PNP_MIO_PPS:
       dimensions:
@@ -785,7 +823,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Million purchasing power standards (PPS)
     L2_PNP_MIO_PPS_KP05:
       dimensions:
@@ -793,7 +832,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Million purchasing power standards (PPS) at 2005 prices
     L2_PNP_PC_GDP:
       dimensions:
@@ -801,7 +841,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Percentage of gross domestic product (GDP)
     L2_PNP_PPS_HAB_KP05:
       dimensions:
@@ -809,7 +850,8 @@ properties:
       - lat
       - lon
       type: data
-      description: 'Sector of performance: Private non-profit sector; NUTS_Level: L2'
+      description: 'Sector of performance: Private non-profit sector; NUTS_Level:
+        L2'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
     L2_TOTAL_EUR_HAB:
       dimensions:
