--- a/catalogue/copernicus-dem/GLO-30/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30/__item__.yaml
@@ -26,12 +26,12 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.000028
+      step: 2.8e-05
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.000028
+      step: 2.8e-05
   cube:variables:
     dsm:
       dimensions:
@@ -40,6 +40,9 @@ properties:
       type: data
       description: altitude over the geoid
       unit: m
+    spatial_ref:
+      dimensions: []
+      type: data
 assets:
   data:
     href: s3://copernicus-dem/GLO-30-v0.zarr
