--- a/catalogue/copernicus-dem/GLO-90/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-90/__item__.yaml
@@ -40,6 +40,7 @@ properties:
       type: data
       description: altitude over the geoid
       unit: m
+  dc:extent: 373.0 GiB
 assets:
   data:
     href: s3://copernicus-dem/GLO-90-v0.zarr
