--- a/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
+++ b/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
@@ -53,6 +53,23 @@ properties:
       type: data
       description: CH4 column-mean molar fraction
       unit: ppb
+    ssrd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface short-wave (solar) radiation downwards
+      unit: J m**-2
+    tcco2:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: CO2 column-mean molar fraction
+      unit: ppm
+  dc:extent: 73.0 GiB
 assets:
   data:
     href: s3://egg4/cams-global-ghg-reanalysis-egg4.zarr
