--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -70,6 +70,7 @@ properties:
       type: data
       description: Total precipitation
       unit: m
+  dc:extent: 7.0 GiB
 assets:
   data:
     href: s3://hedp/era5/ecv-for-climate-change-1979-2023.zarr
