--- a/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
@@ -1233,12 +1233,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 18.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/agr_r_animal-19770101-20230101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/agr_r_animal-19770101-20230101.zarr
+    href: https://earthdatahub.com/stores/eurostat/agr_r_animal-19770101-20230101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
