--- a/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
@@ -95,12 +95,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 1.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/nrg_chddr2_a-19790101-20220101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/nrg_chddr2_a-19790101-20220101.zarr
+    href: https://earthdatahub.com/stores/eurostat/nrg_chddr2_a-19790101-20220101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
