--- a/catalogue/eurostat/geoprocessed-eurostat-employment-rates_lfst_r_erednu/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-employment-rates_lfst_r_erednu/__item__.yaml
@@ -1106,12 +1106,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 8.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/lfst_r_erednu-19950101-20220101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/lfst_r_erednu-19950101-20220101.zarr
+    href: https://earthdatahub.com/stores/eurostat/lfst_r_erednu-19950101-20220101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
