--- a/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
@@ -53,12 +53,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 0.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/sdg_07_11-20000101-20210101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/sdg_07_11-20000101-20210101.zarr
+    href: https://earthdatahub.com/stores/eurostat/sdg_07_11-20000101-20210101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
