--- a/catalogue/eurostat/geoprocessed-eurostat-government-deficit-surplus-gov_10dd_edpt1/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-government-deficit-surplus-gov_10dd_edpt1/__item__.yaml
@@ -722,12 +722,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 6.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/gov_10dd_edpt1-19950101-20220101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/gov_10dd_edpt1-19950101-20220101.zarr
+    href: https://earthdatahub.com/stores/eurostat/gov_10dd_edpt1-19950101-20220101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
