--- a/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
@@ -912,12 +912,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 12.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/rd_e_gerdreg-19800101-20220101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/rd_e_gerdreg-19800101-20220101.zarr
+    href: https://earthdatahub.com/stores/eurostat/rd_e_gerdreg-19800101-20220101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
