--- a/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
@@ -156,12 +156,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 55.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/demo_r_mweek3-20000103-20231030.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/demo_r_mweek3-20000103-20231030.zarr
+    href: https://earthdatahub.com/stores/eurostat/demo_r_mweek3-20000103-20231030.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
