--- a/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/__item__.yaml
@@ -61,12 +61,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 0.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/demo_r_d3dens-19900101-20220101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/demo_r_d3dens-19900101-20220101.zarr
+    href: https://earthdatahub.com/stores/eurostat/demo_r_d3dens-19900101-20220101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
