--- a/catalogue/eurostat/geoprocessed-eurostat-regional-economic-accounts_nama_10r_3gdp/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-regional-economic-accounts_nama_10r_3gdp/__item__.yaml
@@ -258,12 +258,19 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+  dc:extent: 2.0 GiB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/nama_10r_3gdp-20000101-20210101.png
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/nama_10r_3gdp-20000101-20210101.zarr
+    href: https://earthdatahub.com/stores/eurostat/nama_10r_3gdp-20000101-20210101.zarr
     roles:
     - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
