--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -9,12 +9,12 @@ links:
   type: text/html
 bbox:
 - 0.0
-- -90.0
-- 359.8
+- -57.1
+- 359.9
 - 90.0
 properties:
-  start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2023-11-30T23:00:00Z'
+  start_datetime: '1950-01-01T00:00:00Z'
+  end_datetime: '2023-10-31T23:00:00Z'
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
     ocean-wave and land surface quantities
   dc:access_rights: free of charge
@@ -77,15 +77,15 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-    d2m:
+    ssr:
       dimensions:
       - valid_time
       - latitude
       - longitude
       type: data
-      description: 2 metre dewpoint temperature
-      unit: K
-  dc:extent: 14.2 TiB
+      description: Surface net short-wave (solar) radiation
+      unit: J m**-2
+  dc:extent: 34,297.0 GiB
 assets:
   data:
     href: https://earthdatahub.com/stores/ecmwf-era5-single-levels/reanalysis-era5-single-levels-v0.zarr
