--- a/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
@@ -27,6 +27,24 @@ properties:
   - geospatial
   - heating
   - cooling
+  dc:accrual_periodicity: freq:yearly
+  cube:dimensions:
+    time:
+      type: temporal
+      extent:
+      - '1979-01-01T00:00:00Z'
+      - '2022-01-01T00:00:00Z'
+      step: P1Y
+    lat:
+      type: spatial
+      axis: y
+      reference_system: 4326
+      step: 0.1
+    lon:
+      type: spatial
+      axis: x
+      reference_system: 4326
+      step: 0.1
   cube:variables:
     L0_NR_CDD:
       dimensions:
