--- a/catalogue/eurostat/geoprocessed-eurostat-employment-rates_lfst_r_erednu/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-employment-rates_lfst_r_erednu/__item__.yaml
@@ -26,6 +26,24 @@ properties:
   - europe
   - geoprocessed
   - geospatial
+  dc:accrual_periodicity: freq:yearly
+  cube:dimensions:
+    time:
+      type: temporal
+      extent:
+      - '1995-01-01T00:00:00Z'
+      - '2022-01-01T00:00:00Z'
+      step: P1Y
+    lat:
+      type: spatial
+      axis: y
+      reference_system: 4326
+      step: 0.1
+    lon:
+      type: spatial
+      axis: x
+      reference_system: 4326
+      step: 0.1
   cube:variables:
     L0_DEG1_TOTAL_ED0_2_Y15_64_T_PC:
       dimensions:
