--- a/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
@@ -24,6 +24,24 @@ properties:
   - europe
   - geoprocessed
   - geospatial
+  dc:accrual_periodicity: freq:yearly
+  cube:dimensions:
+    time:
+      type: temporal
+      extent:
+      - '2000-01-03T00:00:00Z'
+      - '2023-10-30T00:00:00Z'
+      step: P7D
+    lat:
+      type: spatial
+      axis: y
+      reference_system: 4326
+      step: 0.1
+    lon:
+      type: spatial
+      axis: x
+      reference_system: 4326
+      step: 0.1
   cube:variables:
     L0_NR_T_Y65_69:
       dimensions:
