--- a/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/__item__.yaml
@@ -25,6 +25,24 @@ properties:
   - unidemo
   - geoprocessed
   - geospatial
+  dc:accrual_periodicity: freq:yearly
+  cube:dimensions:
+    time:
+      type: temporal
+      extent:
+      - '1990-01-01T00:00:00Z'
+      - '2022-01-01T00:00:00Z'
+      step: P1Y
+    lat:
+      type: spatial
+      axis: y
+      reference_system: 4326
+      step: 0.1
+    lon:
+      type: spatial
+      axis: x
+      reference_system: 4326
+      step: 0.1
   cube:variables:
     L0_PER_KM2:
       dimensions:
