Rename and change title of DestinE entries

--- a/catalogue/destine-climate-dt/__collection__.yaml
+++ b/catalogue/destine-climate-dt/__collection__.yaml
@@ -1,6 +1,6 @@
-title: DestinE test datasets
+title: Destination Earth digital twin on climate change adaptation
 dc:abstract:
-  ECMWF's DestinE test datasets
+  Destination Earth digital twin on climate change adaptation
 
 links:
 - title: high-resolution forecasts
