--- a/catalogue/destine-climate-dt/sample-dataset/__item__.yaml
+++ b/catalogue/destine-climate-dt/sample-dataset/__item__.yaml
@@ -1,7 +1,7 @@
 links:
-- title: high-resolution forecasts
+- title: Destination Earth
   rel: derived_from
-  href: 
+  href: https://destination-earth.eu/
   type: text/html
 bbox:
 - -180.0
