--- a/catalogue/copernicus-dem/GLO-30-UTM-33N/ingestion/ingestion-steps.yaml
+++ b/catalogue/copernicus-dem/GLO-30-UTM-33N/ingestion/ingestion-steps.yaml
@@ -8,11 +8,30 @@ steps:
     utm_zone: 33N
   robust_to_zarr_kwargs:
     time_dim: y
-    time_restart_block: 8
+    time_restart_block: 24
     time_range: [null, 8000000]
   to_zarr_kwargs:
-    store: 's3://copernicus-dem/GLO-30-UTM-33N-v1.zarr'
+    store: 's3://copernicus-dem/GLO-30-UTM-33N-v0.zarr'
     write_empty_chunks: false
   chunks: {y: 5000, x: 5000}
   xarray_open_kwargs:
     chunks: {}
+    decode_coords: all
+- xarray_datastore_class: convert_dem_ecef
+  xarray_datastore_kwargs:
+    xarray_open_kwargs:
+      chunks: {}
+      engine: zarr
+      filename_or_obj: s3://copernicus-dem/GLO-30-UTM-33N-v0.zarr
+      drop_variables: dem_ecef
+  robust_to_zarr_kwargs:
+    time_dim: y
+    time_restart_block: 24
+    time_range: [null, 8000000]
+  to_zarr_kwargs:
+    store: 's3://copernicus-dem/GLO-30-UTM-33N-v0.zarr'
+    write_empty_chunks: false
+  chunks: {y: 2500, x: 2500}
+  xarray_open_kwargs:
+    chunks: {}
+    decode_coords: all
