--- a/catalogue/ecmwf-forecasts/opendata-oper/ingestion/ingestion-steps.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/ingestion/ingestion-steps.yaml
@@ -1,40 +1,60 @@
 steps:
-- chunks: {latitude: 256, longitude: 256, step: 65}
-  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 1}
-  to_zarr_kwargs:
-    store: /tmp/ecmwf-forecasts-oper/opendata-oper.zarr
-    write_empty_chunks: false
-  xarray_open_kwargs:
-    cache_kwargs: {cache_file: false}
-    chunks: {}
-    engine: ecmwf
-    client: ecmwf-opendata
-    filename_or_obj:
-      "source": ecmwf
-      "stream": oper
-      "type": fc
-      "step": [0, 3,6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240]
-      "levelist": [1000, 925, 850, 700, 500, 300, 250, 200, 50]
-      "param": [d, gh, q, r, t, u, v, vo]
-    request_chunker_kwargs: {time_dim: step}
-    request_chunks: {levelist: 1, step: 1}
-- chunks: {latitude: 256, longitude: 256, step: 65}
-  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 1}
-  to_zarr_kwargs:
-    store: /tmp/ecmwf-forecasts-oper/opendata-oper.zarr
-    write_empty_chunks: false
-  copy_to_url: s3://ecmwf-forecasts-oper/opendata-oper.zarr
-  xarray_open_kwargs:
-    cache_kwargs: {cache_file: false}
-    chunks: {}
-    engine: ecmwf
-    client: ecmwf-opendata
-    filename_or_obj:
-      "source": ecmwf
-      "stream": oper
-      "type": fc
-      "step": [0, 3,6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240]
-      "param": [10u, 10v, 2t, ro, sp, st, tcwv, tp]
-    request_chunker_kwargs: {time_dim: step}
-    request_chunks: {step: 1}
 
+- xarray_open_kwargs:
+    cache_kwargs: { cache_file: false }
+    chunks: { }
+    engine: ecmwf
+    client: ecmwf-opendata
+    filename_or_obj:
+      "source": ecmwf
+      "stream": oper
+      "type": fc
+      "step": [ 0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69,
+                72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240 ]
+      "levelist": [ 1000, 925, 850, 700, 500, 300, 250, 200, 50 ]
+      "param": [ d, gh, q, r, t, u, v, vo ]
+    request_chunker_kwargs: { time_dim: step }
+    request_chunks: { levelist: 1, step: 1 }
+  chunks: {latitude: 256, longitude: 256, step: 1}
+  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 1}
+  to_zarr_kwargs:
+    store: s3://ecmwf-forecasts-oper/intermediate/opendata-oper.zarr
+    write_empty_chunks: false
+
+- xarray_open_kwargs:
+    chunks: {}
+    engine: zarr
+    filename_or_obj: s3://ecmwf-forecasts-oper/intermediate/opendata-oper.zarr
+  chunks: {step: 65}
+  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 1}
+  to_zarr_kwargs:
+    store: s3://ecmwf-forecasts-oper/opendata-oper.zarr
+
+- xarray_open_kwargs:
+    cache_kwargs: { cache_file: false }
+    chunks: { }
+    engine: ecmwf
+    client: ecmwf-opendata
+    filename_or_obj:
+      "source": ecmwf
+      "stream": oper
+      "type": fc
+      "step": [ 0, 3,6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99, 102, 105, 108, 111, 114, 117, 120, 123, 126, 129, 132, 135, 138, 141, 144, 150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216, 222, 228, 234, 240 ]
+      "param": [ 10u, 10v, 2t, ro, sp, st, tcwv, tp ]
+    request_chunker_kwargs: { time_dim: step }
+    request_chunks: { step: 1 }
+  chunks: {latitude: 256, longitude: 256, step: 1}
+  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 1}
+  to_zarr_kwargs:
+    store: s3://ecmwf-forecasts-oper/intermediate/opendata-oper.zarr
+    write_empty_chunks: false
+  #copy_to_url: s3://ecmwf-forecasts-oper/opendata-oper.zarr
+
+- xarray_open_kwargs:
+    chunks: {}
+    engine: zarr
+    filename_or_obj: s3://ecmwf-forecasts-oper/intermediate/opendata-oper.zarr
+  chunks: {step: 65}
+  robust_to_zarr_kwargs: {time_dim: step, time_restart_block: 1}
+  to_zarr_kwargs:
+    store: s3://ecmwf-forecasts-oper/opendata-oper.zarr
