--- a/catalogue/copernicus-dem/GLO-30-UTM-30N/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30-UTM-30N/__item__.yaml
@@ -53,12 +53,13 @@ properties:
   dc:extent: 1,280.0 GiB
 assets:
   data:
-    href: s3://copernicus-dem/GLO-30-UTM-30N-v0.zarr
+    href: https://earthdatahub.com/stores/copernicus-dem/GLO-30-UTM-30N-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
       engine: zarr
       chunks: {}
     xarray:storage_options:
-      endpoint_url: https://s3.gra.perf.cloud.ovh.net
+      client_kwargs:
+        trust_env: true
 search_weight: 0
