--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -73,16 +73,13 @@ properties:
   dc:extent: 7.0 GiB
 assets:
   data:
-    href: s3://hedp/era5/ecv-for-climate-change-1979-2023.zarr
+    href: https://earthdatahub.com/stores/hedp/era5/ecv-for-climate-change-1979-2023.zarr
     roles:
     - data
     xarray:open_kwargs:
       engine: zarr
       chunks: {}
     xarray:storage_options:
-      endpoint_url: https://s3.gra.perf.cloud.ovh.net
-  thumbnail:
-    href: https://storage.gra.cloud.ovh.net/v1/AUTH_cd5fd5eb828b4e7c89f0880ea1d99126/earthdatahub-static/catalogue/collections/era5/items/ecv-for-climate-change.png
-    roles:
-    - thumbnail
+      client_kwargs:
+        trust_env: true
 search_weight: 50
